{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 27,
  "lineage": "dff50810-94a3-d13c-faaa-6b2460c321a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodejs1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c979edc8f8cc101",
            "arn": "arn:aws:ec2:us-east-1:898855534064:instance/i-0eba6068d6a99cebb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eba6068d6a99cebb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0a02c5332507fb9e5",
            "private_dns": "ip-10-142-0-92.ec2.internal",
            "private_ip": "10.142.0.92",
            "public_dns": "ec2-3-220-232-102.compute-1.amazonaws.com",
            "public_ip": "3.220.232.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf33d82b2e5f519c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001c4ccc8e8bfe18e",
            "tags": {
              "Environment": "DEV"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0de2c7621d2feb0c8"
            ]
          },
          "depends_on": [
            "aws_security_group.sg-nodejs-instance",
            "aws_subnet.subnet1",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898855534064:internet-gateway/igw-09f5c1afe5479e7f8",
            "id": "igw-09f5c1afe5479e7f8",
            "owner_id": "898855534064",
            "vpc_id": "vpc-0886d4d9f205b8d9f"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b15b9dbb92e38cc",
            "owner_id": "898855534064",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f5c1afe5479e7f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0886d4d9f205b8d9f"
          },
          "depends_on": [
            "aws_internet_gateway.gateway1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054335bc3ff35dc41",
            "route_table_id": "rtb-02b15b9dbb92e38cc",
            "subnet_id": "subnet-001c4ccc8e8bfe18e"
          },
          "depends_on": [
            "aws_route_table.route_table1",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-nodejs-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898855534064:security-group/sg-0de2c7621d2feb0c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de2c7621d2feb0c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nodejs_sg",
            "name_prefix": "",
            "owner_id": "898855534064",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0886d4d9f205b8d9f"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898855534064:subnet/subnet-001c4ccc8e8bfe18e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.142.0.0/24",
            "id": "subnet-001c4ccc8e8bfe18e",
            "map_public_ip_on_launch": true,
            "owner_id": "898855534064",
            "vpc_id": "vpc-0886d4d9f205b8d9f"
          },
          "depends_on": [
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898855534064:vpc/vpc-0886d4d9f205b8d9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.142.0.0/16",
            "default_network_acl_id": "acl-04d36b8d3186767a4",
            "default_route_table_id": "rtb-0ae988ac68a2cffb0",
            "default_security_group_id": "sg-04ce0aa7385477a79",
            "dhcp_options_id": "dopt-c0f344a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0886d4d9f205b8d9f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ae988ac68a2cffb0",
            "owner_id": "898855534064"
          }
        }
      ]
    }
  ]
}